--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ form {
     max-width: 600px; /* pour ne pas qu'il s'agrandisse à l'infini */
     margin: 0 auto;
 }
+textarea {
+    resize: none;
+    height: 60px;
+}
 .success, .error {
     width: 400px;
     margin: 0 auto;
